kubeflow/common/keycloak/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: auth
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /auth/realms/
      route:
        - destination:
            host: keycloak.auth.svc.cluster.local
            port:
              number: 443
